Implementado lógica de mudar de modo com semaphores e lógica do LED RGB com event flag

--- a/ECU.ioc
+++ b/ECU.ioc
@@ -247,6 +247,7 @@ RCC.DIVQ2Freq_Value=75000000
 ProjectManager.MainLocation=Core/Src
 RCC.SAI1Freq_Value=50000000
 RCC.CortexFreq_Value=75000000
+FREERTOS.BinarySemaphores01=s_mode_button,Dynamic,NULL
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32H743VITx
 ADC1.Overrun=ADC_OVR_DATA_OVERWRITTEN
@@ -297,7 +298,7 @@ Mcu.Pin6=PA6
 Mcu.Pin7=PA7
 Mcu.Pin8=PC4
 Mcu.Pin9=PC5
-FREERTOS.IPParameters=Tasks01,configMINIMAL_STACK_SIZE,FootprintOK,Queues01,configMAX_TASK_NAME_LEN,Mutexes01,configENABLE_FPU,configTOTAL_HEAP_SIZE,configUSE_MALLOC_FAILED_HOOK,configUSE_STATS_FORMATTING_FUNCTIONS,configCHECK_FOR_STACK_OVERFLOW
+FREERTOS.IPParameters=Tasks01,configMINIMAL_STACK_SIZE,FootprintOK,Queues01,configMAX_TASK_NAME_LEN,Mutexes01,configENABLE_FPU,configTOTAL_HEAP_SIZE,configUSE_MALLOC_FAILED_HOOK,configUSE_STATS_FORMATTING_FUNCTIONS,configCHECK_FOR_STACK_OVERFLOW,BinarySemaphores01
 Mcu.Pin0=PE4
 Mcu.Pin1=PE5
 GPIO.groupedBy=Group By Peripherals
