--- a/ECU.ioc
+++ b/ECU.ioc
@@ -81,7 +81,7 @@ FDCAN2.RxFifo1ElmtsNbr=32
 FDCAN2.TxBuffersNbr=32
 FDCAN2.TxEventsNbr=32
 FDCAN2.TxFifoQueueElmtsNbr=32
-FREERTOS.BinarySemaphores01=s_mode_button,Dynamic,NULL
+FREERTOS.BinarySemaphores01=s_mode_button,Dynamic,NULL;s_Allowed_change_mode,Dynamic,NULL
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configMINIMAL_STACK_SIZE,FootprintOK,Queues01,configMAX_TASK_NAME_LEN,Mutexes01,configENABLE_FPU,configTOTAL_HEAP_SIZE,configUSE_MALLOC_FAILED_HOOK,configUSE_STATS_FORMATTING_FUNCTIONS,configCHECK_FOR_STACK_OVERFLOW,BinarySemaphores01
 FREERTOS.Mutexes01=m_state_parameter_mutex,Dynamic,NULL
@@ -318,17 +318,20 @@ PE15.GPIOParameters=GPIO_Label
 PE15.GPIO_Label=S_VEL4
 PE15.Locked=true
 PE15.Signal=GPXTI15
-PE4.GPIOParameters=GPIO_Label
+PE4.GPIOParameters=PinState,GPIO_Label
 PE4.GPIO_Label=C_LED_DEBUG1
 PE4.Locked=true
+PE4.PinState=GPIO_PIN_SET
 PE4.Signal=GPIO_Output
-PE5.GPIOParameters=GPIO_Label
+PE5.GPIOParameters=PinState,GPIO_Label
 PE5.GPIO_Label=C_LED_DEBUG2
 PE5.Locked=true
+PE5.PinState=GPIO_PIN_RESET
 PE5.Signal=GPIO_Output
-PE6.GPIOParameters=GPIO_Label
+PE6.GPIOParameters=PinState,GPIO_Label
 PE6.GPIO_Label=C_LED_DEBUG3
 PE6.Locked=true
+PE6.PinState=GPIO_PIN_SET
 PE6.Signal=GPIO_Output
 PH0-OSC_IN\ (PH0).Mode=HSE-External-Oscillator
 PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
@@ -493,3 +496,4 @@ VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=custom
+isbadioc=false
