adicionando sugestões do PR

--- a/ECU.ioc
+++ b/ECU.ioc
@@ -81,7 +81,7 @@ FDCAN2.RxFifo1ElmtsNbr=32
 FDCAN2.TxBuffersNbr=32
 FDCAN2.TxEventsNbr=32
 FDCAN2.TxFifoQueueElmtsNbr=32
-FREERTOS.BinarySemaphores01=s_mode_button,Dynamic,NULL;s_Allowed_change_mode,Dynamic,NULL
+FREERTOS.BinarySemaphores01=s_mode_button,Dynamic,NULL;s_allowed_change_mode,Dynamic,NULL
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configMINIMAL_STACK_SIZE,FootprintOK,Queues01,configMAX_TASK_NAME_LEN,Mutexes01,configENABLE_FPU,configTOTAL_HEAP_SIZE,configUSE_MALLOC_FAILED_HOOK,configUSE_STATS_FORMATTING_FUNCTIONS,configCHECK_FOR_STACK_OVERFLOW,BinarySemaphores01
 FREERTOS.Mutexes01=m_state_parameter_mutex,Dynamic,NULL
