--- a/ECU.ioc
+++ b/ECU.ioc
@@ -85,19 +85,19 @@ FREERTOS.BinarySemaphores01=s_allowed_change_mode,Dynamic,NULL
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configMINIMAL_STACK_SIZE,FootprintOK,Queues01,configMAX_TASK_NAME_LEN,Mutexes01,configENABLE_FPU,configTOTAL_HEAP_SIZE,configUSE_MALLOC_FAILED_HOOK,configUSE_STATS_FORMATTING_FUNCTIONS,configCHECK_FOR_STACK_OVERFLOW,BinarySemaphores01
 FREERTOS.Mutexes01=m_state_parameter_mutex,Dynamic,NULL
-FREERTOS.Queues01=q_speed_message,16,speed_message_t,0,Dynamic,NULL,NULL;q_torque_message,16,torque_message_t,0,Dynamic,NULL,NULL;q_ref_torque_message,16,ref_torque_t,0,Dynamic,NULL,NULL;q_datalog_message,128,datalog_message_t,0,Dynamic,NULL,NULL;q_debugleds_message,16,debugled_message_t,0,Dynamic,NULL,NULL;q_rgb_led_message,16,rgb_led_message_t,0,Dynamic,NULL,NULL
-FREERTOS.Tasks01=t_main_task,24,1024,main_task,As weak,NULL,Dynamic,NULL,NULL;t_controle,8,1024,controle,As external,NULL,Dynamic,NULL,NULL;t_datalogger,8,1024,datalogger,As external,NULL,Dynamic,NULL,NULL;t_throttle_read,8,1024,throttle_read,As external,NULL,Dynamic,NULL,NULL;t_steering_read,8,1024,steering_read,As external,NULL,Dynamic,NULL,NULL;t_speed_calc,8,1024,speed_calc,As external,NULL,Dynamic,NULL,NULL;t_odometer_calc,8,1024,odometer_calc,As external,NULL,Dynamic,NULL,NULL;t_thr_handler,8,1024,throttle_handler,As external,NULL,Dynamic,NULL,NULL;t_torque_manager,8,1024,torque_manager,As external,NULL,Dynamic,NULL,NULL;t_debugleds,8,1024,debugleds,As external,NULL,Dynamic,NULL,NULL;t_rgb_led,8,1024,rgb_led,As external,NULL,Dynamic,NULL,NULL;t_seleciona_modo,8,1024,seleciona_modo,As external,NULL,Dynamic,NULL,NULL
+FREERTOS.Queues01=q_speed_message,16,speed_message_t,0,Dynamic,NULL,NULL;q_torque_message,16,torque_message_t,0,Dynamic,NULL,NULL;q_ref_torque_message,16,ref_torque_t,0,Dynamic,NULL,NULL;q_datalog_message,128,datalog_message_t,0,Dynamic,NULL,NULL;q_debugleds_message,16,debugled_message_t,0,Dynamic,NULL,NULL;q_rgb_led_message,16,rgb_led_message_t,0,Dynamic,NULL,NULL;q_throttle_control,16,uint16_t,0,Dynamic,NULL,NULL
+FREERTOS.Tasks01=t_main_task,24,1024,main_task,As weak,NULL,Dynamic,NULL,NULL;t_controle,8,1024,controle,As external,NULL,Dynamic,NULL,NULL;t_datalogger,8,1024,datalogger,As external,NULL,Dynamic,NULL,NULL;t_throttle_read,8,1024,throttle_read,As external,NULL,Dynamic,NULL,NULL;t_steering_read,8,1024,steering_read,As external,NULL,Dynamic,NULL,NULL;t_speed_calc,8,1024,speed_calc,As external,NULL,Dynamic,NULL,NULL;t_odometer_calc,8,1024,odometer_calc,As external,NULL,Dynamic,NULL,NULL;t_thr_handler,8,1024,throttle_handler,As external,NULL,Dynamic,NULL,NULL;t_torque_manager,8,1024,torque_manager,As external,NULL,Dynamic,NULL,NULL;t_debugleds,8,1024,debugleds,As external,NULL,Dynamic,NULL,NULL;t_rgb_led,8,1024,rgb_led,As external,NULL,Dynamic,NULL,NULL;t_seleciona_modo,8,1024,seleciona_modo,As external,NULL,Dynamic,NULL,NULL;t_RTD,8,1024,RTD,As external,NULL,Dynamic,NULL,NULL;t_throttle_control,8,1024,throttle_control,As external,NULL,Dynamic,NULL,NULL
 FREERTOS.configCHECK_FOR_STACK_OVERFLOW=2
 FREERTOS.configENABLE_FPU=1
 FREERTOS.configMAX_TASK_NAME_LEN=32
 FREERTOS.configMINIMAL_STACK_SIZE=64
-FREERTOS.configTOTAL_HEAP_SIZE=60360
+FREERTOS.configTOTAL_HEAP_SIZE=121260
 FREERTOS.configUSE_MALLOC_FAILED_HOOK=1
 FREERTOS.configUSE_STATS_FORMATTING_FUNCTIONS=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C3.IPParameters=Timing
-I2C3.Timing=0x00909FCE
+I2C3.Timing=0x00C0EAFF
 KeepUserPlacement=false
 Mcu.Family=STM32H7
 Mcu.IP0=ADC1
@@ -367,81 +367,82 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_FDCAN1_Init-FDCAN1-false-HAL-true,6-MX_FDCAN2_Init-FDCAN2-false-HAL-true,7-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,8-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_TIM1_Init-TIM1-false-HAL-true,10-MX_I2C3_Init-I2C3-false-HAL-true,11-MX_TIM2_Init-TIM2-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=37500000
-RCC.AHB12Freq_Value=75000000
-RCC.AHB4Freq_Value=75000000
-RCC.APB1Freq_Value=37500000
-RCC.APB2Freq_Value=75000000
-RCC.APB3Freq_Value=37500000
-RCC.APB4Freq_Value=75000000
-RCC.AXIClockFreq_Value=75000000
+RCC.AHB12Freq_Value=100000000
+RCC.AHB4Freq_Value=100000000
+RCC.APB1Freq_Value=50000000
+RCC.APB2Freq_Value=100000000
+RCC.APB3Freq_Value=50000000
+RCC.APB4Freq_Value=100000000
+RCC.AXIClockFreq_Value=100000000
 RCC.CECFreq_Value=32000
 RCC.CKPERFreq_Value=64000000
-RCC.CortexFreq_Value=75000000
-RCC.CpuClockFreq_Value=75000000
-RCC.D1CPREFreq_Value=75000000
+RCC.CortexFreq_Value=200000000
+RCC.CpuClockFreq_Value=200000000
+RCC.D1CPREFreq_Value=200000000
 RCC.D1PPRE=RCC_APB3_DIV2
 RCC.D2PPRE1=RCC_APB1_DIV2
-RCC.DFSDMACLkFreq_Value=50000000
-RCC.DFSDMFreq_Value=75000000
+RCC.DFSDMACLkFreq_Value=100000000
+RCC.DFSDMFreq_Value=100000000
 RCC.DIVM1=1
 RCC.DIVM2=1
-RCC.DIVN1=18
+RCC.DIVN1=50
 RCC.DIVN2=18
-RCC.DIVP1Freq_Value=75000000
+RCC.DIVP1Freq_Value=200000000
 RCC.DIVP2=4
 RCC.DIVP2Freq_Value=37500000
 RCC.DIVP3Freq_Value=16125000
-RCC.DIVQ1=3
-RCC.DIVQ1Freq_Value=50000000
+RCC.DIVQ1=4
+RCC.DIVQ1Freq_Value=100000000
 RCC.DIVQ2Freq_Value=75000000
 RCC.DIVQ3Freq_Value=16125000
-RCC.DIVR1Freq_Value=75000000
+RCC.DIVR1Freq_Value=200000000
 RCC.DIVR2Freq_Value=75000000
 RCC.DIVR3Freq_Value=16125000
 RCC.FDCANCLockSelection=RCC_FDCANCLKSOURCE_HSE
 RCC.FDCANFreq_Value=8000000
-RCC.FMCFreq_Value=75000000
+RCC.FMCFreq_Value=100000000
 RCC.FamilyName=M
-RCC.HCLK3ClockFreq_Value=75000000
-RCC.HCLKFreq_Value=75000000
-RCC.HRTIMFreq_Value=75000000
+RCC.HCLK3ClockFreq_Value=100000000
+RCC.HCLKFreq_Value=100000000
+RCC.HPRE=RCC_HCLK_DIV2
+RCC.HRTIMFreq_Value=100000000
 RCC.HSE_VALUE=8000000
-RCC.I2C123Freq_Value=37500000
-RCC.I2C4Freq_Value=75000000
-RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVN1,DIVN2,DIVP1Freq_Value,DIVP2,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANCLockSelection,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL3FRACN,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
-RCC.LPTIM1Freq_Value=37500000
-RCC.LPTIM2Freq_Value=75000000
-RCC.LPTIM345Freq_Value=75000000
-RCC.LPUART1Freq_Value=37500000
+RCC.I2C123Freq_Value=50000000
+RCC.I2C4Freq_Value=100000000
+RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVN1,DIVN2,DIVP1Freq_Value,DIVP2,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANCLockSelection,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL3FRACN,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.LPTIM1Freq_Value=50000000
+RCC.LPTIM2Freq_Value=100000000
+RCC.LPTIM345Freq_Value=100000000
+RCC.LPUART1Freq_Value=50000000
 RCC.LTDCFreq_Value=16125000
 RCC.MCO1PinFreq_Value=64000000
-RCC.MCO2PinFreq_Value=75000000
+RCC.MCO2PinFreq_Value=200000000
 RCC.PLL2FRACN=6144
 RCC.PLL3FRACN=0
-RCC.PLLFRACN=6144
+RCC.PLLFRACN=0
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
-RCC.QSPIFreq_Value=75000000
+RCC.QSPIFreq_Value=100000000
 RCC.RNGFreq_Value=48000000
 RCC.RTCFreq_Value=32000
-RCC.SAI1Freq_Value=50000000
-RCC.SAI23Freq_Value=50000000
-RCC.SAI4AFreq_Value=50000000
-RCC.SAI4BFreq_Value=50000000
-RCC.SDMMCFreq_Value=50000000
-RCC.SPDIFRXFreq_Value=50000000
-RCC.SPI123Freq_Value=50000000
-RCC.SPI45Freq_Value=75000000
-RCC.SPI6Freq_Value=75000000
-RCC.SWPMI1Freq_Value=37500000
-RCC.SYSCLKFreq_VALUE=75000000
+RCC.SAI1Freq_Value=100000000
+RCC.SAI23Freq_Value=100000000
+RCC.SAI4AFreq_Value=100000000
+RCC.SAI4BFreq_Value=100000000
+RCC.SDMMCFreq_Value=100000000
+RCC.SPDIFRXFreq_Value=100000000
+RCC.SPI123Freq_Value=100000000
+RCC.SPI45Freq_Value=100000000
+RCC.SPI6Freq_Value=100000000
+RCC.SWPMI1Freq_Value=50000000
+RCC.SYSCLKFreq_VALUE=200000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.Tim1OutputFreq_Value=75000000
-RCC.Tim2OutputFreq_Value=75000000
-RCC.TraceFreq_Value=75000000
-RCC.USART16Freq_Value=75000000
-RCC.USART234578Freq_Value=37500000
-RCC.USBFreq_Value=50000000
-RCC.VCO1OutputFreq_Value=150000000
+RCC.Tim1OutputFreq_Value=100000000
+RCC.Tim2OutputFreq_Value=100000000
+RCC.TraceFreq_Value=200000000
+RCC.USART16Freq_Value=100000000
+RCC.USART234578Freq_Value=50000000
+RCC.USBFreq_Value=100000000
+RCC.VCO1OutputFreq_Value=400000000
 RCC.VCO2OutputFreq_Value=150000000
 RCC.VCO3OutputFreq_Value=32250000
 RCC.VCOInput1Freq_Value=8000000
@@ -476,7 +477,7 @@ SH.GPXTI5.ConfNb=1
 SH.GPXTI6.0=GPIO_EXTI6
 SH.GPXTI6.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_256
-SPI1.CalculateBaudRate=195.312 KBits/s
+SPI1.CalculateBaudRate=390.625 KBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
