--- a/ECU.ioc
+++ b/ECU.ioc
@@ -168,6 +168,7 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA1_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.EXTI15_10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI4_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.EXTI9_5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.FDCAN1_IT0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.FDCAN1_IT1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
@@ -288,13 +289,10 @@ PD3.GPIO_Label=B_DEBUG2
 PD3.Locked=true
 PD3.Signal=GPXTI3
 PD4.GPIOParameters=GPIO_Label
-PD4.GPIO_Label=B_DEBUG1
+PD4.GPIO_Label=B_RTD
 PD4.Locked=true
 PD4.Signal=GPXTI4
-PD5.GPIOParameters=GPIO_Label
-PD5.GPIO_Label=B_RTD
 PD5.Locked=true
-PD5.Signal=GPXTI5
 PD6.GPIOParameters=GPIO_Label
 PD6.GPIO_Label=B_MODO
 PD6.Locked=true
@@ -471,8 +469,6 @@ SH.GPXTI3.0=GPIO_EXTI3
 SH.GPXTI3.ConfNb=1
 SH.GPXTI4.0=GPIO_EXTI4
 SH.GPXTI4.ConfNb=1
-SH.GPXTI5.0=GPIO_EXTI5
-SH.GPXTI5.ConfNb=1
 SH.GPXTI6.0=GPIO_EXTI6
 SH.GPXTI6.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_256
