Modificando LEDS para alinha com chicote

--- a/ECU.ioc
+++ b/ECU.ioc
@@ -227,9 +227,10 @@ PB3\ (JTDO/TRACESWO).Mode=Full_Duplex_Master
 PB3\ (JTDO/TRACESWO).Signal=SPI1_SCK
 PB4\ (NJTRST).Mode=Full_Duplex_Master
 PB4\ (NJTRST).Signal=SPI1_MISO
-PB5.GPIOParameters=GPIO_Label
+PB5.GPIOParameters=PinState,GPIO_Label
 PB5.GPIO_Label=C_RTDS
 PB5.Locked=true
+PB5.PinState=GPIO_PIN_RESET
 PB5.Signal=GPIO_Output
 PB8.GPIOParameters=GPIO_Label
 PB8.GPIO_Label=BOOT1
@@ -273,15 +274,15 @@ PCC.Series=STM32H7
 PCC.Temperature=25
 PCC.Vdd=3.0
 PD12.GPIOParameters=GPIO_Label
-PD12.GPIO_Label=C_LED_BLUE
+PD12.GPIO_Label=C_LED_GREEN
 PD12.Locked=true
 PD12.Signal=GPIO_Output
 PD13.GPIOParameters=GPIO_Label
-PD13.GPIO_Label=C_LED_GREEN
+PD13.GPIO_Label=C_LED_RED
 PD13.Locked=true
 PD13.Signal=GPIO_Output
 PD14.GPIOParameters=GPIO_Label
-PD14.GPIO_Label=C_LED_RED
+PD14.GPIO_Label=C_LED_BLUE
 PD14.Locked=true
 PD14.Signal=GPIO_Output
 PD3.GPIOParameters=GPIO_Label
@@ -289,12 +290,12 @@ PD3.GPIO_Label=B_DEBUG2
 PD3.Locked=true
 PD3.Signal=GPXTI3
 PD4.GPIOParameters=GPIO_Label
-PD4.GPIO_Label=B_RTD
+PD4.GPIO_Label=B_MODO
 PD4.Locked=true
 PD4.Signal=GPXTI4
 PD5.Locked=true
 PD6.GPIOParameters=GPIO_Label
-PD6.GPIO_Label=B_MODO
+PD6.GPIO_Label=B_RTD
 PD6.Locked=true
 PD6.Signal=GPXTI6
 PD7.Mode=Full_Duplex_Master
