corrigindo cores do LED RGB

--- a/ECU.ioc
+++ b/ECU.ioc
@@ -274,15 +274,15 @@ PCC.Series=STM32H7
 PCC.Temperature=25
 PCC.Vdd=3.0
 PD12.GPIOParameters=GPIO_Label
-PD12.GPIO_Label=C_LED_GREEN
+PD12.GPIO_Label=C_LED_BLUE
 PD12.Locked=true
 PD12.Signal=GPIO_Output
 PD13.GPIOParameters=GPIO_Label
-PD13.GPIO_Label=C_LED_RED
+PD13.GPIO_Label=C_LED_GREEN
 PD13.Locked=true
 PD13.Signal=GPIO_Output
 PD14.GPIOParameters=GPIO_Label
-PD14.GPIO_Label=C_LED_BLUE
+PD14.GPIO_Label=C_LED_RED
 PD14.Locked=true
 PD14.Signal=GPIO_Output
 PD3.GPIOParameters=GPIO_Label
@@ -493,3 +493,4 @@ VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=custom
+isbadioc=false
