--- a/ECU.ioc
+++ b/ECU.ioc
@@ -99,6 +99,7 @@ GPIO.groupedBy=Group By Peripherals
 I2C3.IPParameters=Timing
 I2C3.Timing=0x00C0EAFF
 KeepUserPlacement=false
+Mcu.CPN=STM32H743VIT6
 Mcu.Family=STM32H7
 Mcu.IP0=ADC1
 Mcu.IP1=CORTEX_M7
@@ -120,77 +121,78 @@ Mcu.Name=STM32H743VITx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE4
 Mcu.Pin1=PE5
-Mcu.Pin10=PB1
-Mcu.Pin11=PE12
-Mcu.Pin12=PE13
-Mcu.Pin13=PE14
-Mcu.Pin14=PE15
-Mcu.Pin15=PB12
-Mcu.Pin16=PB13
-Mcu.Pin17=PD12
-Mcu.Pin18=PD13
-Mcu.Pin19=PD14
+Mcu.Pin10=PB0
+Mcu.Pin11=PB1
+Mcu.Pin12=PE12
+Mcu.Pin13=PE13
+Mcu.Pin14=PE14
+Mcu.Pin15=PE15
+Mcu.Pin16=PB12
+Mcu.Pin17=PB13
+Mcu.Pin18=PD12
+Mcu.Pin19=PD13
 Mcu.Pin2=PE6
-Mcu.Pin20=PC9
-Mcu.Pin21=PA8
-Mcu.Pin22=PA9
-Mcu.Pin23=PA10
-Mcu.Pin24=PA11
-Mcu.Pin25=PA12
-Mcu.Pin26=PA13 (JTMS/SWDIO)
-Mcu.Pin27=PA14 (JTCK/SWCLK)
-Mcu.Pin28=PD3
-Mcu.Pin29=PD4
+Mcu.Pin20=PD14
+Mcu.Pin21=PC9
+Mcu.Pin22=PA8
+Mcu.Pin23=PA9
+Mcu.Pin24=PA10
+Mcu.Pin25=PA11
+Mcu.Pin26=PA12
+Mcu.Pin27=PA13 (JTMS/SWDIO)
+Mcu.Pin28=PA14 (JTCK/SWCLK)
+Mcu.Pin29=PD3
 Mcu.Pin3=PH0-OSC_IN (PH0)
-Mcu.Pin30=PD5
-Mcu.Pin31=PD6
-Mcu.Pin32=PD7
-Mcu.Pin33=PB3 (JTDO/TRACESWO)
-Mcu.Pin34=PB4 (NJTRST)
-Mcu.Pin35=PB5
-Mcu.Pin36=PB8
-Mcu.Pin37=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin38=VP_SYS_VS_tim3
-Mcu.Pin39=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin30=PD4
+Mcu.Pin31=PD5
+Mcu.Pin32=PD6
+Mcu.Pin33=PD7
+Mcu.Pin34=PB3 (JTDO/TRACESWO)
+Mcu.Pin35=PB4 (NJTRST)
+Mcu.Pin36=PB5
+Mcu.Pin37=PB8
+Mcu.Pin38=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin39=VP_SYS_VS_tim3
 Mcu.Pin4=PH1-OSC_OUT (PH1)
-Mcu.Pin40=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin40=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin41=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin5=PA5
 Mcu.Pin6=PA6
 Mcu.Pin7=PA7
 Mcu.Pin8=PC4
 Mcu.Pin9=PC5
-Mcu.PinsNb=41
+Mcu.PinsNb=42
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743VITx
 MxCube.Version=6.4.0
 MxDb.Version=DB.6.0.40
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.DMA1_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.EXTI15_10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
-NVIC.EXTI4_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
-NVIC.EXTI9_5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
-NVIC.FDCAN1_IT0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
-NVIC.FDCAN1_IT1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
-NVIC.FDCAN2_IT0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
-NVIC.FDCAN2_IT1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:true
+NVIC.DMA1_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:true
+NVIC.EXTI15_10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.EXTI4_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.EXTI9_5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.FDCAN1_IT0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.FDCAN1_IT1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.FDCAN2_IT0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.FDCAN2_IT1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:true
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:true
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:true
+NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:true
 NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
-NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true
-NVIC.TIM1_TRG_COM_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
-NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:true
+NVIC.TIM1_TRG_COM_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM3_IRQn
 NVIC.TimeBaseIP=TIM3
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:true
 PA10.Mode=Asynchronous
 PA10.Signal=LPUART1_RX
 PA11.Mode=FDCAN_Activate
@@ -217,6 +219,10 @@ PA8.Mode=I2C
 PA8.Signal=I2C3_SCL
 PA9.Mode=Asynchronous
 PA9.Signal=LPUART1_TX
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=LD1
+PB0.Locked=true
+PB0.Signal=GPIO_Output
 PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=S_ADC_E2
 PB1.Signal=ADCx_INP5
@@ -494,4 +500,3 @@ VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=custom
-isbadioc=false
