--- a/ECU.ioc
+++ b/ECU.ioc
@@ -53,11 +53,14 @@ Dma.ADC1.0.SyncRequestNumber=1
 Dma.ADC1.0.SyncSignalID=NONE
 Dma.Request0=ADC1
 Dma.RequestsNb=1
+FDCAN1.CalculateBaudRateNominal=50000
+FDCAN1.CalculateTimeBitNominal=20000
+FDCAN1.CalculateTimeQuantumNominal=625.0
 FDCAN1.DataPrescaler=5
 FDCAN1.DataSyncJumpWidth=4
 FDCAN1.DataTimeSeg1=27
 FDCAN1.DataTimeSeg2=4
-FDCAN1.IPParameters=RxFifo0ElmtsNbr,RxFifo1ElmtsNbr,RxBuffersNbr,TxEventsNbr,TxBuffersNbr,TxFifoQueueElmtsNbr,NominalSyncJumpWidth,NominalTimeSeg1,NominalTimeSeg2,NominalPrescaler,DataPrescaler,DataSyncJumpWidth,DataTimeSeg1,DataTimeSeg2
+FDCAN1.IPParameters=RxFifo0ElmtsNbr,RxFifo1ElmtsNbr,RxBuffersNbr,TxEventsNbr,TxBuffersNbr,TxFifoQueueElmtsNbr,NominalSyncJumpWidth,NominalTimeSeg1,NominalTimeSeg2,NominalPrescaler,DataPrescaler,DataSyncJumpWidth,DataTimeSeg1,DataTimeSeg2,CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal
 FDCAN1.NominalPrescaler=5
 FDCAN1.NominalSyncJumpWidth=4
 FDCAN1.NominalTimeSeg1=27
@@ -68,11 +71,15 @@ FDCAN1.RxFifo1ElmtsNbr=32
 FDCAN1.TxBuffersNbr=32
 FDCAN1.TxEventsNbr=32
 FDCAN1.TxFifoQueueElmtsNbr=32
+FDCAN2.CalculateBaudRateNominal=500000
+FDCAN2.CalculateTimeBitNominal=2000
+FDCAN2.CalculateTimeQuantumNominal=125.0
 FDCAN2.DataSyncJumpWidth=2
 FDCAN2.DataTimeSeg1=13
 FDCAN2.DataTimeSeg2=2
-FDCAN2.IPParameters=TxFifoQueueElmtsNbr,TxBuffersNbr,TxEventsNbr,RxBuffersNbr,RxFifo1ElmtsNbr,RxFifo0ElmtsNbr,NominalSyncJumpWidth,NominalTimeSeg1,DataTimeSeg1,DataSyncJumpWidth,DataTimeSeg2,MessageRAMOffset
+FDCAN2.IPParameters=TxFifoQueueElmtsNbr,TxBuffersNbr,TxEventsNbr,RxBuffersNbr,RxFifo1ElmtsNbr,RxFifo0ElmtsNbr,NominalSyncJumpWidth,NominalTimeSeg1,DataTimeSeg1,DataSyncJumpWidth,DataTimeSeg2,MessageRAMOffset,CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal,NominalPrescaler
 FDCAN2.MessageRAMOffset=1280
+FDCAN2.NominalPrescaler=1
 FDCAN2.NominalSyncJumpWidth=2
 FDCAN2.NominalTimeSeg1=13
 FDCAN2.RxBuffersNbr=32
@@ -165,32 +172,32 @@ Mcu.PinsNb=41
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743VITx
-MxCube.Version=6.5.0
-MxDb.Version=DB.6.0.50
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:true
+MxCube.Version=6.6.1
+MxDb.Version=DB.6.0.60
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DMA1_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:true
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.EXTI15_10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.FDCAN1_IT0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.FDCAN1_IT1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.FDCAN2_IT0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.FDCAN2_IT1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:true
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:true
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:true
-NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false\:true
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:true
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:false
 NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
-NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:true
+NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
 NVIC.TIM1_TRG_COM_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM3_IRQn
 NVIC.TimeBaseIP=TIM3
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:true
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA10.Mode=Asynchronous
 PA10.Signal=LPUART1_RX
 PA11.Mode=FDCAN_Activate
