odometer calc using rear speed, .ioc button change

--- a/ECU.ioc
+++ b/ECU.ioc
@@ -33,6 +33,9 @@ ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_810CYCLES_5
 ADC1.SamplingTime-4\#ChannelRegularConversion=ADC_SAMPLETIME_810CYCLES_5
 ADC1.SamplingTime-5\#ChannelRegularConversion=ADC_SAMPLETIME_810CYCLES_5
 ADC1.master=1
+CAD.formats=
+CAD.pinconfig=
+CAD.provider=
 Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.ADC1.0.EventEnable=DISABLE
 Dma.ADC1.0.FIFOMode=DMA_FIFOMODE_DISABLE
@@ -294,11 +297,11 @@ PD14.GPIO_Label=C_LED_RED
 PD14.Locked=true
 PD14.Signal=GPIO_Output
 PD3.GPIOParameters=GPIO_Label
-PD3.GPIO_Label=B_DYNAMICS_CONTROLS
+PD3.GPIO_Label=B_MODE
 PD3.Locked=true
 PD3.Signal=GPIO_Input
 PD4.GPIOParameters=GPIO_Label
-PD4.GPIO_Label=B_MODE
+PD4.GPIO_Label=B_DYNAMICS_CONTROLS
 PD4.Locked=true
 PD4.Signal=GPIO_Input
 PD5.Locked=true
@@ -366,6 +369,7 @@ ProjectManager.PreviousToolchain=STM32CubeIDE
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=ECU.ioc
 ProjectManager.ProjectName=ECU
+ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=FDCAN
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
@@ -495,4 +499,5 @@ VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=custom
+rtos.0.ip=FREERTOS
 isbadioc=false
