--- a/ECU.ioc
+++ b/ECU.ioc
@@ -109,25 +109,28 @@ File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C3.IPParameters=Timing
 I2C3.Timing=0x00C0EAFF
+IWDG1.IPParameters=Prescaler
+IWDG1.Prescaler=IWDG_PRESCALER_8
 KeepUserPlacement=false
 Mcu.CPN=STM32H743VIT6
 Mcu.Family=STM32H7
 Mcu.IP0=ADC1
 Mcu.IP1=CORTEX_M7
-Mcu.IP10=RCC
-Mcu.IP11=SPI1
-Mcu.IP12=SYS
-Mcu.IP13=TIM1
-Mcu.IP14=TIM2
+Mcu.IP10=NVIC
+Mcu.IP11=RCC
+Mcu.IP12=SPI1
+Mcu.IP13=SYS
+Mcu.IP14=TIM1
+Mcu.IP15=TIM2
 Mcu.IP2=DEBUG
 Mcu.IP3=DMA
 Mcu.IP4=FDCAN1
 Mcu.IP5=FDCAN2
 Mcu.IP6=FREERTOS
 Mcu.IP7=I2C3
-Mcu.IP8=LPUART1
-Mcu.IP9=NVIC
-Mcu.IPNb=15
+Mcu.IP8=IWDG1
+Mcu.IP9=LPUART1
+Mcu.IPNb=16
 Mcu.Name=STM32H743VITx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE4
@@ -162,16 +165,17 @@ Mcu.Pin34=PB4 (NJTRST)
 Mcu.Pin35=PB5
 Mcu.Pin36=PB8
 Mcu.Pin37=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin38=VP_SYS_VS_tim3
-Mcu.Pin39=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin38=VP_IWDG1_VS_IWDG
+Mcu.Pin39=VP_SYS_VS_tim3
 Mcu.Pin4=PH1-OSC_OUT (PH1)
-Mcu.Pin40=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin40=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin41=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin5=PA5
 Mcu.Pin6=PA6
 Mcu.Pin7=PA7
 Mcu.Pin8=PC4
 Mcu.Pin9=PC5
-Mcu.PinsNb=41
+Mcu.PinsNb=42
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743VITx
@@ -374,6 +378,8 @@ ProjectManager.RegisterCallBack=FDCAN
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
+ProjectManager.UAScriptAfterPath=
+ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_FDCAN1_Init-FDCAN1-false-HAL-true,6-MX_FDCAN2_Init-FDCAN2-false-HAL-true,7-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,8-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_TIM1_Init-TIM1-false-HAL-true,10-MX_I2C3_Init-I2C3-false-HAL-true,11-MX_TIM2_Init-TIM2-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=37500000
@@ -492,6 +498,8 @@ TIM2.Period=0xFFFFFFFF
 TIM2.Prescaler=0
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
+VP_IWDG1_VS_IWDG.Mode=IWDG_Activate
+VP_IWDG1_VS_IWDG.Signal=IWDG1_VS_IWDG
 VP_SYS_VS_tim3.Mode=TIM3
 VP_SYS_VS_tim3.Signal=SYS_VS_tim3
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
